# git-tags

./: CHANGELOG.md  Makefile  README.md  git-tags  git-tags.1  pyproject.toml  setup.cfg
.todo/: done.txt  todo.txt  todo.txt.bak
gittags/: __init__.py
share/man/man1/: git-tags.1
tools/: __init__.py  command.py  config.py  mkbrew  mkman  release
