[tool.poetry]
name = "git-tags"
version = "0.1.0"
description = "A git extension to print a detailed list of tags."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "MIT"
repository = "http://github.com:alissa-huskey/git-tags"

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.8.0"
argparse-manpage = "^1.5"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"
neovim = "^0.3.1"
pylama = "^7.7.1"

poetry-core = "^1.0.3"
# [tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
